Add possibility to install latest git version from git ppa on ubuntu

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,11 @@
     - not git_install_from_source | bool
     - ansible_os_family == 'RedHat'
 
+- name: Add git ppa to get latest version (Ubuntu)
+  apt_repository:
+    repo: 'ppa:git-core/ppa'
+  when: git_ensure_latest_version and (ansible_distribution == 'Ubuntu')
+
 - name: Update apt cache (Debian).
   apt: update_cache=true cache_valid_time=86400
   when: ansible_os_family == 'Debian'
