--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,10 @@ jobs:
             playbook: source-install.yml
           - distro: ubuntu1804
             playbook: source-install.yml
+          - distro: ubuntu1804
+            playbook: playbook-latest.yml
+          - distro: debian10
+            playbook: playbook-latest.yml
 
     steps:
       - name: Check out the codebase.
