--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,3 +24,5 @@ git_install_from_source_force_update: false
 
 # Leave this at it's default.
 git_reinstall_from_source: false
+
+git_codename: "{{ ansible_distribution_release }}"
