--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,10 +8,8 @@
     - not git_install_from_source | bool
     - ansible_os_family == 'RedHat'
 
-- name: Add git ppa to get latest version (Ubuntu)
-  apt_repository:
-    repo: 'ppa:git-core/ppa'
-  when: git_ensure_latest_version and (ansible_distribution == 'Ubuntu')
+- import_tasks: install-from-ppa.yml
+  when: git_ensure_latest_version and not git_install_from_source
 
 - name: Update apt cache (Debian).
   apt: update_cache=true cache_valid_time=86400
