--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,6 @@ name: CI
 'on':
   pull_request:
   push:
-    branches:
-      - master
   schedule:
     - cron: "0 6 * * 1"
 
@@ -47,6 +45,8 @@ jobs:
           - distro: ubuntu1804
             playbook: converge.yml
           - distro: debian9
+            playbook: converge.yml
+          - distro: debian10
             playbook: converge.yml
           - distro: centos7
             playbook: source-install.yml
